--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <title class="title">PDF editor</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/css/main.css">
     <script type="text/javascript" src="/eel.js"></script>
-	<script src="js/pdfjs-2.14.305-dist/build/pdf.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/lib/pdfjs-2.14.305-dist/build/pdf.js"></script>
+	<script type="module" src="js/main.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.svg">
   </head>
 
   <body>
 	<!-- <object data="img/logo.png"></object> -->
-	<div id = "gallery"></div>
+	<div id = "gallery"> 
+	</div>
   </body>
 </html>
