--- a/src/web/index.html
+++ b/src/web/index.html
@@ -11,7 +11,9 @@
 
   <body>
 	<!-- <object data="img/logo.png"></object> -->
-	<div id = "gallery"> 
-	</div>
+	<div id = "gallery"></div>
+	<button onclick="eel.test('hi')">
+		press me
+	</button>
   </body>
 </html>
