--- a/src/web/index.html
+++ b/src/web/index.html
@@ -11,8 +11,9 @@
 
   <body>
 	<!-- <object data="img/logo.png"></object> -->
+	<input type="file" id = "file-input" multiple onclick="this.value=null;">
 	<div id = "gallery"></div>
-	<button onclick="eel.test('hi')">
+	<button id = "save-button">
 		press me
 	</button>
   </body>
